# superstore-dashboard-streamlit

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml
docker/: load_pg.py
src/: components.py  constants.py  dataset.py  features.py  models.py  plots.py  queries.py
