[project]
name = "superstore-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2>=2.9.9",
    "sqlalchemy>=2.0.35",
    "streamlit>=1.39.0",
    "xlrd>=2.0.1",
]
